WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234729
[LFC][IFC] Do not let Layout geometry types leak into InlineDisplay::Line
https://bugs.webkit.org/show_bug.cgi?id=234729
Summary
[LFC][IFC] Do not let Layout geometry types leak into InlineDisplay::Line
alan
Reported
2021-12-28 10:54:12 PST
ssia
Attachments
Patch
(17.62 KB, patch)
2021-12-28 10:56 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-28 10:56:04 PST
Created
attachment 448053
[details]
Patch
EWS
Comment 2
2021-12-28 13:44:50 PST
Committed
r287476
(
245611@main
): <
https://commits.webkit.org/245611@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448053
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-28 13:45:18 PST
<
rdar://problem/86964808
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug